# 10news

./: LICENSE  README.md  pyproject.toml  t.py
tennews/: __main__.py  base.py  source.py
tennews/sources/: developer_tech.py  devto.py  newsapi.py  thehackernews.py
