[tool.poetry]
name = "tennews"
version = "0.1.0"
description = "Display ten URLs for the latest tech news."
authors = [
    "arylka <yukinowak8@gmail.com>",
    "bswck <bartoszpiotrslawecki@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
