[tool.poetry]
name = "tennews"
version = "0.1.0"
description = "Display ten URLs for the latest tech news."
authors = [
    "arylka <yukinowak8@gmail.com>",
    "bswck <bartoszpiotrslawecki@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.31.0"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"
keyring = "^25.2.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.10.0"
ruff = ">=0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
